Alteracao na Analise

--- a/VimConfig/README
+++ b/VimConfig/README
@@ -3,7 +3,7 @@
 	export EDITOR=vim
 	export VISUAL=vim
 
-#Configurar a Entrada Padrao de Texto do Terminal no ~/inputrc#
+#Configurar a Entrada Padrao de Texto do Terminal no ~/.inputrc#
 
 	set editing-mode vi
 	set keymap vi-command 
