--- a/VimConfig/README
+++ b/VimConfig/README
@@ -17,7 +17,21 @@
 	:set number
 	:set relativenumber
 
+#Configurar Identação do Vim no ~/.vimrc#
+
+	:set autoindent
+	:set tabstop=4
+	:set softtabstop=0
+	:set shiftwidth=4
+
 #Configurar Folding Syntax do HTML do Vim no ~/.vim/after/syntax/html.vim#
 
 	syntax region htmlFold start="<\z(\<\(area\|base\|br\|col\|command\|embed\|hr\|img\|input\|keygen\|link\|meta\|para\|source\|track\|wbr\>\)\@![a-z-]\+\>\)\%(\_s*\_[^/]\?>\|\_s\_[^>]*\_[^>/]>\)" end="</\z1\_s*>" fold transparent keepend extend containedin=htmlHead,htmlH\d
+
+#Configurar Folding Syntax do PHP do Vim no ~/.vimrc#
+
+	:let php_folding = 1
+	:let php_htmlInStrings = 1
+	:let php_sql_query = 1
+	:let php_noShortTags = 1
 
